--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
@@ -27,7 +27,7 @@
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="PurpleBackground" stylesheets="@Style.css">
                             <children>
-                                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="BackTicket" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="100.0" spacing="10.0" styleClass="BackTicket" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                                     <children>
                                         <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="title-bar" stylesheets="@Style.css" text="Historial de equipos" />
                                         <HBox alignment="CENTER" spacing="10.0" styleClass="hbox-cute" stylesheets="@Style.css">
@@ -42,7 +42,7 @@
                                         <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" styleClass="StoreBackground" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
                                             <items>
                                                 <!-- Lista de Equipos -->
-                                                <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
                                                         <Label stylesheets="@Style.css" text="Equipos">
                                                             <styleClass>
@@ -61,8 +61,11 @@
                                                             </columnResizePolicy>
                                                         </TableView>
                                                     </children>
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
                                                 </VBox>
-                                                <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
+                                                <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
                                                     <children>
                                                         <Label fx:id="selectedTeamLabel" stylesheets="@Style.css" text="Seleccioná un equipo">
                                                             <styleClass>
@@ -83,6 +86,9 @@
                                                             </columnResizePolicy>
                                                         </TableView>
                                                     </children>
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
                                                 </VBox>
                                             </items>
                                         </SplitPane>
