--- a/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
+++ b/TaskProgramll/src/main/resources/cr/ac/una/taskprogramll/view/HistorialEquipos.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.HistorialEquiposController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cr.ac.una.taskprogramll.controller.HistorialEquiposController">
     <children>
         <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <tabs>
@@ -59,7 +59,18 @@
                                                             <columnResizePolicy>
                                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                             </columnResizePolicy>
+                                             <VBox.margin>
+                                                <Insets />
+                                             </VBox.margin>
+                                             <padding>
+                                                <Insets left="10.0" right="10.0" />
+                                             </padding>
                                                         </TableView>
+                                          <MFXButton fx:id="btnBackMenu" onAction="#onActionBtnBackMenu" text="Volver al menú">
+                                             <graphic>
+                                                <VBox id="LobbyIcon" prefHeight="30.0" prefWidth="30.0" styleClass="LobbyIcon" stylesheets="@Style.css" />
+                                             </graphic>
+                                          </MFXButton>
                                                     </children>
                                                 </VBox>
                                                 <VBox alignment="CENTER" spacing="10.0" styleClass="InteractiveVBox" stylesheets="@Style.css">
@@ -81,6 +92,9 @@
                                                             <columnResizePolicy>
                                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                                             </columnResizePolicy>
+                                             <padding>
+                                                <Insets left="10.0" right="10.0" />
+                                             </padding>
                                                         </TableView>
                                                     </children>
                                                 </VBox>
@@ -109,7 +123,10 @@
                                                                 <String fx:value="hbox-cute" />
                                                             </styleClass>
                                                         </Label>
-                                                        <Accordion fx:id="matchAccordion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="Accordion" stylesheets="@Style.css" VBox.vgrow="ALWAYS" />
+                                                        <Accordion fx:id="matchAccordion" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="Accordion" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
+                                             <padding>
+                                                <Insets bottom="15.0" left="15.0" right="15.0" />
+                                             </padding></Accordion>
                                                     </children>
                                                     <padding>
                                                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
@@ -127,6 +144,9 @@
                                                             <children>
                                                                 <Canvas fx:id="matchGoalsCanvas" height="150.0" width="200.0" />
                                                             </children>
+                                             <padding>
+                                                <Insets bottom="15.0" left="15.0" right="15.0" />
+                                             </padding>
                                                         </HBox>
                                                     </children>
                                                     <padding>
@@ -144,17 +164,17 @@
                         </AnchorPane>
                     </content>
                 </Tab>
-                <Tab text="Estadísticas">
+                <Tab text="Estadísticas Generales">
                     <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="PurpleBackground" stylesheets="@Style.css">
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="StoreBackground" stylesheets="@Style.css">
                             <children>
-                                <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <VBox prefHeight="200.0" prefWidth="100.0" spacing="2.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
                                         <Label alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="title-bar" stylesheets="@Style.css" text="Estadísticas del equipo" />
-                                        <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0" styleClass="BusStopBackground" stylesheets="@Style.css" VBox.vgrow="ALWAYS">
-                                            <items>
-                                                <VBox alignment="CENTER" spacing="10.0">
-                                                    <children>
+                              <HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" VBox.vgrow="ALWAYS">
+                                 <children>
+                                    <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                                       <children>
                                                         <Label stylesheets="@Style.css" text="Estadísticas Generales">
                                                             <styleClass>
                                                                 <String fx:value="SmallLabel" />
@@ -169,6 +189,10 @@
                                                                 <Label fx:id="tournamentsLabel" styleClass="SmallLabel" text="Torneos Participados: 0" />
                                                             </children>
                                                         </VBox>
+                                       </children>
+                                    </VBox>
+                                    <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                                       <children>
                                                         <Label stylesheets="@Style.css" text="Puntos por Torneo (Global)">
                                                             <styleClass>
                                                                 <String fx:value="SmallLabel" />
@@ -179,61 +203,84 @@
                                                             <content>
                                                                 <VBox spacing="5.0">
                                                                     <children>
-                                                                        <Canvas fx:id="pointsPerMatchCanvas" height="200.0" width="300.0" />
+                                                                        <Canvas fx:id="pointsPerMatchCanvas" height="150.0" width="285.0" />
                                                                         <VBox fx:id="pointsPerTourneyLegend" spacing="5.0" styleClass="hbox-cute" stylesheets="@Style.css" />
                                                                     </children>
                                                                 </VBox>
                                                             </content>
                                                         </ScrollPane>
-                                                        <Label stylesheets="@Style.css" text="Ranking Global (Mismo Deporte)">
-                                                            <styleClass>
-                                                                <String fx:value="SmallLabel" />
-                                                                <String fx:value="hbox-cute" />
-                                                            </styleClass>
-                                                        </Label>
-                                                        <ScrollPane fitToHeight="true" pannable="true">
-                                                            <content>
-                                                                <Canvas fx:id="globalRankingCanvas" height="200.0" width="300.0" />                                                            </content>
-                                                        </ScrollPane>
-                                                    </children>
-                                                </VBox>
-                                                <VBox alignment="CENTER" spacing="10.0">
-                                                    <children>
-                                                        <Label stylesheets="@Style.css" text="Estadísticas por Torneo">
-                                                            <styleClass>
-                                                                <String fx:value="SmallLabel" />
-                                                                <String fx:value="hbox-cute" />
-                                                            </styleClass>
-                                                        </Label>
-                                                        <TableView fx:id="tourneyStatsTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" styleClass="TableViewLightdBlue">
-                                                            <columns>
-                                                                <TableColumn fx:id="tourneyStatsNameColumn" prefWidth="100.0" text="Torneo" />
-                                                                <TableColumn fx:id="tourneyStatsPointsColumn" prefWidth="80.0" text="Puntos" />
-                                                                <TableColumn fx:id="tourneyStatsGoalsColumn" prefWidth="80.0" text="Goles" />
-                                                                <TableColumn fx:id="tourneyStatsRankingColumn" prefWidth="80.0" text="Ranking" />
-                                                            </columns>
-                                                        </TableView>
-                                                        <Label stylesheets="@Style.css" text="Goles por Ronda (por Torneo)">
-                                                            <styleClass>
-                                                                <String fx:value="SmallLabel" />
-                                                                <String fx:value="hbox-cute" />
-                                                            </styleClass>
-                                                        </Label>
-                                                        <ScrollPane fitToHeight="true" pannable="true">
-                                                            <content>
-                                                                <Canvas fx:id="tourneyPointsPerMatchCanvas" height="200.0" width="300.0" />
-                                                            </content>
-                                                        </ScrollPane>
-                                                    </children>
-                                                </VBox>
-                                            </items>
-                                        </SplitPane>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </HBox>
+                                          <VBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
+                                              <children>
+                                                  <Label stylesheets="@Style.css" text="Ranking Global (Mismo Deporte)">
+                                                      <styleClass>
+                                                          <String fx:value="SmallLabel" />
+                                                          <String fx:value="hbox-cute" />
+                                                      </styleClass>
+                                                  </Label>
+                                                  <ScrollPane fitToHeight="true" pannable="true" VBox.vgrow="ALWAYS">
+                                                      <content>
+                                                          <Canvas fx:id="globalRankingCanvas" height="150.0" width="300.0" />                                                            </content>
+                                                  </ScrollPane>
+                                              </children>
+                                          </VBox>
                                     </children>
                                 </VBox>
                             </children>
                         </AnchorPane>
                     </content>
                 </Tab>
+            <Tab text="Estadísticas Torneos">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="GameBackground" stylesheets="@Style.css">
+                     <children>
+                        <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="370.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                                          <VBox alignment="CENTER" spacing="10.0" HBox.hgrow="ALWAYS">
+                                              <children>
+                                                  <Label stylesheets="@Style.css" text="Estadísticas por Torneo">
+                                                      <styleClass>
+                                                          <String fx:value="SmallLabel" />
+                                                          <String fx:value="hbox-cute" />
+                                                      </styleClass>
+                                                  </Label>
+                                                  <TableView fx:id="tourneyStatsTable" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="200.0" styleClass="TableViewLightdBlue" VBox.vgrow="ALWAYS">
+                                                      <columns>
+                                                          <TableColumn fx:id="tourneyStatsNameColumn" prefWidth="100.0" text="Torneo" />
+                                                          <TableColumn fx:id="tourneyStatsPointsColumn" prefWidth="80.0" text="Puntos" />
+                                                          <TableColumn fx:id="tourneyStatsGoalsColumn" prefWidth="80.0" text="Goles" />
+                                                          <TableColumn fx:id="tourneyStatsRankingColumn" prefWidth="80.0" text="Ranking" />
+                                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                                  </TableView>
+                                              </children>
+                                          </VBox>
+                              <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+                                 <children>
+                                                  <Label stylesheets="@Style.css" text="Goles por Ronda (por Torneo)">
+                                                      <styleClass>
+                                                          <String fx:value="SmallLabel" />
+                                                          <String fx:value="hbox-cute" />
+                                                      </styleClass>
+                                                  </Label>
+                                                  <ScrollPane minHeight="-Infinity" minWidth="-Infinity" pannable="true" VBox.vgrow="ALWAYS">
+                                                      <content>
+                                                          <Canvas fx:id="tourneyPointsPerMatchCanvas" height="150.0" width="250.0" />
+                                                      </content>
+                                                  </ScrollPane>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
             </tabs>
         </TabPane>
     </children>
